# powerk8s

./: .gitignore  LICENSE  Makefile  README.md  powerk8s.py  powerk8s_test.py  pyproject.toml  setup.py  test_powerk8s.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
docs/: index.html  powerk8s.html  search.js
fixtures/: dummy_kubeconfig.yaml
scripts/: dev.sh  lint.py
