[tool.poetry]
name = "powerk8s"
version = "0.8.0"
description = "Powerline Segment for Kubernetes"
authors = ["George Kontridze <george.kontridze@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gkze/powerk8s"
repository = "https://github.com/gkze/powerk8s"
documentation = "https://gkze.github.io/powerk8s/powerk8s.html"
keywords = ["kubernetes", "powerline", "tools"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
kubernetes = "^26.1"
powerline-status = "^2.7"

[tool.poetry.dev-dependencies]
pdoc = "^13.1"
pymultilint = "^1.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.multilint]
src_paths = ["*.py"]

[tool.autoflake]
in-place = true
remove-unused-variables = true
remove-rhs-for-unused-variables = true

[tool.mypy]
files = ["*.py"]
